completed bootstrap project

--- a/Django Udemy Tutorial/Bootstrap/Bootstrap_Project_Main.html
+++ b/Django Udemy Tutorial/Bootstrap/Bootstrap_Project_Main.html
@@ -24,21 +24,24 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Bootstrap Project</a>
+          <a class="navbar-brand" href="">Bootstrap Project</a>
         </div>
         <div class="collapse navbar-collapse">
-          <button
+          <a
             type="button"
             class="btn btn-default navbar-btn"
             href="Bootstrap_Project_Signup.html"
           >
             Sign in
-          </button>
+          </a>
         </div>
       </div>
     </nav>
-    <div class="container-fluid" style="padding-top: 20px">
-      <div class="jumbotron" style="margin-left: 10%; margin-right: 10%">
+    <div
+      class="container-fluid"
+      style="padding-top: 20px; margin-left: 10%; margin-right: 10%"
+    >
+      <div class="jumbotron">
         <h1>Coffee Lover Project</h1>
         <p>Welcome to your Bootstrap Project: Coffee Lover!</p>
         <p>You will recreate this webpage and an additional Form Page</p>
@@ -63,34 +66,129 @@
                   }
                 }
               </style>
-              <li id="image_links"><a href="!">One</a></li>
-              <li id="image_links"><a href="@">Two</a></li>
-              <li id="image_links"><a href="#">Three</a></li>
-              <li id="image_links"><a href="$">Four</a></li>
-              <li id="image_links"><a href="%">Five</a></li>
-              <li id="image_links"><a href="^">Six</a></li>
+              <li id="image_links">
+                <a
+                  href="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >One</a
+                >
+              </li>
+              <li id="image_links">
+                <a
+                  href="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/90V03Q5Y60.jpg"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >Two</a
+                >
+              </li>
+              <li id="image_links">
+                <a
+                  href="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/O83SF2RB6D.jpg"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >Three</a
+                >
+              </li>
+              <li id="image_links">
+                <a
+                  href="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/5JVPSVP7EI.jpg"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >Four</a
+                >
+              </li>
+              <li id="image_links">
+                <a
+                  href="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/C5Y10KIIHA.jpg"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >Five</a
+                >
+              </li>
+              <li id="image_links">
+                <a
+                  href="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/YSSFRY5B25.jpg"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  >Six</a
+                >
+              </li>
             </ul>
           </li>
+          <li>
+            Next make sure that at the largest settings you have 3 columns of
+            pictures. On the smallest screen settings you should have 2 columns.
+            Its up to you where you want to change.
+          </li>
+          <li>Next create another html file for the sign up page.</li>
+          <li>
+            Create a Form on this Sign Up page with Email, Password, and a Check
+            Box
+          </li>
         </ol>
+        <p>
+          That's it. Feel free to play around with this project and style it
+          more to your liking. The main focuses of this project are the uses of
+          NavBar, Jumbotron, Form, Container, and the Grid System.
+        </p>
       </div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla numquam
+        ex ratione illo? Autem eveniet similique, ducimus deserunt ipsum
+        architecto earum itaque, asperiores harum consectetur adipisci fuga
+        quisquam quibusdam. Sint!
+      </p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo soluta
+        necessitatibus maiores vel eligendi quidem sit id, magni earum quae
+        ratione ullam. Quae aut voluptatem illo? Maxime dicta quis recusandae?
+      </p>
     </div>
-    <div class="container-fluid">
-      <div style="margin-left: 10%; margin-right: 10%">
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla
-          numquam ex ratione illo? Autem eveniet similique, ducimus deserunt
-          ipsum architecto earum itaque, asperiores harum consectetur adipisci
-          fuga quisquam quibusdam. Sint!
-        </p>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo soluta
-          necessitatibus maiores vel eligendi quidem sit id, magni earum quae
-          ratione ullam. Quae aut voluptatem illo? Maxime dicta quis recusandae?
-        </p>
+    <div class="container-fluid" style="padding-left: 10%; padding-right: 10%">
+      <h2>Pictures of Coffee</h2>
+      <div class="col-lg-4 col-xs-6 thumbnail">
+        <img
+          src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg"
+          alt=""
+        />
       </div>
-      <div style="margin-left: 10%; margin-right: 10%">
-        <h2>Pictures of Coffee</h2>
+      <div class="col-lg-4 col-xs-6 thumbnail">
+        <img
+          src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/90V03Q5Y60.jpg"
+          alt=""
+        />
       </div>
+      <div class="col-lg-4 col-xs-6 thumbnail">
+        <img
+          src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/O83SF2RB6D.jpg"
+          alt=""
+        />
+      </div>
+      <div class="col-lg-4 col-xs-6 thumbnail">
+        <img
+          src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/5JVPSVP7EI.jpg"
+          alt=""
+        />
+      </div>
+      <div class="col-lg-4 col-xs-6 thumbnail">
+        <img
+          src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/C5Y10KIIHA.jpg"
+          alt=""
+        />
+      </div>
+      <div class="col-lg-4 col-xs-6 thumbnail">
+        <img
+          src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/YSSFRY5B25.jpg"
+          alt=""
+        />
+      </div>
+      <!-- https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/04LDEYRW59.jpg
+      https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/90V03Q5Y60.jpg
+      https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/O83SF2RB6D.jpg
+      https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/5JVPSVP7EI.jpg
+      https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/C5Y10KIIHA.jpg
+      https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/YSSFRY5B25.jpg -->
     </div>
   </body>
 </html>
