--- a/Django Udemy Tutorial/DOM/connectfour.html
+++ b/Django Udemy Tutorial/DOM/connectfour.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <style>
+      body {
+        background-color: darkolivegreen;
+      }
       .jumbotron {
         background-color: bisque;
         /*mix-blend-mode: difference;
@@ -30,7 +33,7 @@
         border: 2px solid black;
       }
       .circle {
-        background-color: white;
+        background-color: bisque;
         display: block;
         height: 60%;
         width: 60%;
