--- a/Django Udemy Tutorial/DOM/connectfour.html
+++ b/Django Udemy Tutorial/DOM/connectfour.html
@@ -62,60 +62,60 @@
       <div class="column">
         <table align="center">
           <tr>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
           </tr>
           <tr>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
           </tr>
           <tr>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
           </tr>
           <tr>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
           </tr>
           <tr>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
           </tr>
           <tr>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
           </tr>
           <tr>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
-            <td><span class="circle"></span></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
+            <td><button class="circle"></button></td>
           </tr>
         </table>
       </div>
