figured out coordinate system maybe

--- a/Django Udemy Tutorial/DOM/connectfour.html
+++ b/Django Udemy Tutorial/DOM/connectfour.html
@@ -32,7 +32,7 @@
         text-align: center;
         border: 2px solid black;
       }
-      .circle {
+      tr button {
         background-color: bisque;
         display: block;
         height: 60%;
@@ -58,69 +58,74 @@
       </div>
     </div>
     <div class="container">
-      <div class="column">Name1</div>
+      <div class="column" id="player1">Player 1</div>
       <div class="column">
         <table align="center">
           <tr>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
           </tr>
           <tr>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
           </tr>
           <tr>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
           </tr>
           <tr>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
           </tr>
           <tr>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
           </tr>
           <tr>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
           </tr>
           <tr>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
-            <td><button class="circle"></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
+            <td><button></button></td>
           </tr>
         </table>
       </div>
-      <div class="column">Name2</div>
+      <div class="column" id="player2">Player 2</div>
     </div>
   </body>
+  <script
+    src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"
+  ></script>
   <script src="connectfour.js"></script>
 </html>
